# algo3tp1

./: .gitignore
experimentacion/: measure.py  measure_fixed_n.py  output.txt  output_same_t.txt  output_same_t_2.txt  outputporonga.txt  params.py  plot.py  plot_the_three.py  problems.txt  test.txt  test2-preplot.txt  test2.txt  test4.txt
experimentacion/bf/: plot_bf_and_cota.py  plot_bf_and_cota_log.py  plot_bf_div_cota.py
experimentacion/bt/: plot_bt_and_cota.py  plot_bt_and_cota_log.py  plot_bt_div_cota.py
experimentacion/global/: plot_the_three.py  plot_the_three_fixed_n.py
experimentacion/outputs/: output_fixed_n_nounsolv_noshuff_head.txt  output_fixed_n_nounsolv_noshuff_tail.txt  output_fixed_n_unsolv_shuff.txt  output_fixed_n_unsolv_shuff2.txt  output_fixed_n_unsolv_shuff3.txt  output_fixed_n_unsolv_shuff4.txt  output_fixed_n_unsolv_shuff5.txt  output_general_windows.txt  output_no_shuffling_no_unsolv_head.txt  output_no_shuffling_no_unsolv_tail.txt
experimentacion/params/: params.py  params_fixed_n.py  params_no_shuffling.py
experimentacion/pd/: params.py  plot_pd.py  plot_pd_and_cota.py  plot_pd_div_cota.py  superoutput.txt  superoutput2.txt
impl/: CMakeLists.txt  main.cpp
impl/src/: back_tracking.cpp  back_tracking.h  brute_force.cpp  brute_force.h  dynamic_programming.cpp  dynamic_programming.h  main.cpp  utils.h
informe/: abstract.tex  backtracking.tex  brute-forcing.tex  conclusiones.tex  informe.tex  introduccion.tex  performance.tex  prodin.tex  tecnicas.tex
